--- a/01-wytiwyr/pom.xml
+++ b/01-wytiwyr/pom.xml
@@ -6,9 +6,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.agoncal.sample.arquilian</groupId>
     <artifactId>wytiwyr</artifactId>
-    <packaging>war</packaging>
     <version>1.0</version>
-    <name>What you test is what you run</name>
+    <packaging>war</packaging>
+    <name>01 - What you test is what you run</name>
 
     <parent>
         <groupId>org.agoncal.sample.arquilian</groupId>
