--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 .DS_Store
+Thumbs.db
 .idea
-*.vpdm
 *.log
+*.jdbc
 *.iml
-vpproject
 target
+*.class
+*.jar
+*.war
+*.ear
+*.rar
 *.ipr
 *.iws
 rebel.xml
@@ -14,3 +19,14 @@ rebel.xml
 .project
 .settings
 WebContent
+*.vpp~*
+*.vpdm
+vpproject
+.vpprefdata
+*dummy*.*
+*-soapui-project.xml
+.lock
+teamworkUser.xml
+projectFilesBackup*
+*.zip
+*.gz
