--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <modules>
         <module>01-wytiwyr</module>
-        <module>02-weldse</module>
+        <module>02-se-container</module>
     </modules>
 
     <properties>
@@ -20,6 +20,7 @@
         <version.junit>4.11</version.junit>
         <version.glassfish>3.1.2.2</version.glassfish>
         <version.weld>1.1.10.Final</version.weld>
+        <version.openwebeans>1.1.3</version.openwebeans>
         <version.arquillian>1.0.4.Final</version.arquillian>
         <version.arquillian.glassfish.embedded>1.0.0.CR4</version.arquillian.glassfish.embedded>
         <version.mockito>1.9.5</version.mockito>
@@ -35,17 +36,38 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <!-- GlassFish -->
             <dependency>
                 <groupId>org.glassfish.main.extras</groupId>
                 <artifactId>glassfish-embedded-all</artifactId>
                 <version>${version.glassfish}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <!-- Weld -->
+            <dependency>
+                <groupId>org.jboss.weld</groupId>
+                <artifactId>weld-core-bom</artifactId>
+                <version>${version.weld}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.jboss.weld.se</groupId>
                 <artifactId>weld-se</artifactId>
                 <version>${version.weld}</version>
             </dependency>
+
+            <!-- Open WebBeans -->
+            <dependency>
+                <groupId>org.apache.openwebbeans</groupId>
+                <artifactId>openwebbeans</artifactId>
+                <version>${version.openwebeans}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Arquillian -->
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
@@ -64,6 +86,18 @@
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
                 <version>${version.arquillian.glassfish.embedded}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.container</groupId>
+                <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+                <version>1.0.0.CR6</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.container</groupId>
+                <artifactId>arquillian-openwebbeans-embedded-1</artifactId>
+                <version>1.0.0.CR2</version>
                 <scope>test</scope>
             </dependency>
             <!-- Test -->
@@ -120,20 +154,6 @@
                             <goals>
                                 <goal>integration-test</goal>
                                 <goal>verify</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>${version.maven.exec.plugin}</version>
-                    <executions>
-                        <execution>
-                            <id>run</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>java</goal>
                             </goals>
                         </execution>
                     </executions>
