--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <version.weld>1.1.10.Final</version.weld>
         <version.openwebeans>1.1.3</version.openwebeans>
         <version.arquillian>1.0.4.Final</version.arquillian>
+        <version.arquillian.persistence>1.0.0.Alpha5</version.arquillian.persistence>
         <version.arquillian.glassfish.embedded>1.0.0.CR4</version.arquillian.glassfish.embedded>
         <version.mockito>1.9.5</version.mockito>
         <version.maven.embedded.glassfish.plugin>3.1.2.2</version.maven.embedded.glassfish.plugin>
@@ -83,6 +84,14 @@
                 <version>${version.arquillian}</version>
                 <scope>test</scope>
             </dependency>
+
+            <!-- Arquillian Containers -->
+            <dependency>
+                <groupId>org.jboss.arquillian.container</groupId>
+                <artifactId>arquillian-container-spi</artifactId>
+                <version>${version.arquillian}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
@@ -101,6 +110,15 @@
                 <version>1.0.0.CR2</version>
                 <scope>test</scope>
             </dependency>
+
+            <!-- Arquillian Extensions -->
+            <dependency>
+                <groupId>org.jboss.arquillian.extension</groupId>
+                <artifactId>arquillian-persistence-impl</artifactId>
+                <version>${version.arquillian.persistence}</version>
+                <scope>test</scope>
+            </dependency>
+
             <!-- Test -->
             <dependency>
                 <groupId>junit</groupId>
@@ -149,6 +167,11 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${version.maven.failsafe.plugin}</version>
                     <configuration>
+                        <classpathDependencyExcludes>
+                            <classpathDependencyExclude>
+                                javax.servlet:servlet-api
+                            </classpathDependencyExclude>
+                        </classpathDependencyExcludes>
                     </configuration>
                     <executions>
                         <execution>
