Upgrading POM dependencies

--- a/02-se-container/pom.xml
+++ b/02-se-container/pom.xml
@@ -69,6 +69,7 @@
     </profiles>
 
     <build>
+        <finalName>sampleArquilianSE</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
