--- a/03-persistence/pom.xml
+++ b/03-persistence/pom.xml
@@ -51,6 +51,7 @@
     </profiles>
 
     <build>
+        <finalName>sampleArquilianPersistence</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
