--- a/pom.xml
+++ b/pom.xml
@@ -17,21 +17,27 @@
     </modules>
 
     <properties>
-        <version.java>1.6</version.java>
+        <version.java>1.7</version.java>
+        <!--Test-->
         <version.junit>4.11</version.junit>
         <version.glassfish>3.1.2.2</version.glassfish>
-        <version.weld>1.1.10.Final</version.weld>
-        <version.openwebeans>1.1.3</version.openwebeans>
-        <version.arquillian>1.0.4.Final</version.arquillian>
-        <version.arquillian.persistence>1.0.0.Alpha5</version.arquillian.persistence>
+        <version.weld>2.1.0.Final</version.weld>
+        <version.openwebeans>1.2.1</version.openwebeans>
+        <version.arquillian>1.1.2.Final</version.arquillian>
+        <version.arquillian.persistence>1.0.0.Alpha6</version.arquillian.persistence>
         <version.arquillian.glassfish.embedded>1.0.0.CR4</version.arquillian.glassfish.embedded>
+        <version.arquillian.glassfish.weld-se-embedded>1.0.0.CR7</version.arquillian.glassfish.weld-se-embedded>
+        <version.arquillian.glassfish.openwebbeans-embedded>1.0.0.CR2
+        </version.arquillian.glassfish.openwebbeans-embedded>
         <version.mockito>1.9.5</version.mockito>
-        <version.maven.embedded.glassfish.plugin>3.1.2.2</version.maven.embedded.glassfish.plugin>
-        <version.maven.clean.plugin>2.4.1</version.maven.clean.plugin>
-        <version.maven.war.plugin>2.3</version.maven.war.plugin>
+        <!--Maven Plugins-->
+        <version.maven.embedded.glassfish.plugin>3.1.1</version.maven.embedded.glassfish.plugin>
+        <version.maven.clean.plugin>2.5</version.maven.clean.plugin>
+        <version.maven.war.plugin>2.4</version.maven.war.plugin>
         <version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
-        <version.maven.failsafe.plugin>2.14.1</version.maven.failsafe.plugin>
+        <version.maven.failsafe.plugin>2.16</version.maven.failsafe.plugin>
         <version.maven.exec.plugin>1.2.1</version.maven.exec.plugin>
+        <!--Project-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -55,11 +61,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.weld.se</groupId>
-                <artifactId>weld-se</artifactId>
-                <version>${version.weld}</version>
-            </dependency>
+            <!--<dependency>-->
+            <!--<groupId>org.jboss.weld.se</groupId>-->
+            <!--<artifactId>weld-se</artifactId>-->
+            <!--<version>${version.weld}</version>-->
+            <!--</dependency>-->
 
             <!-- Open WebBeans -->
             <dependency>
@@ -101,13 +107,13 @@
             <dependency>
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
-                <version>1.0.0.CR6</version>
+                <version>${version.arquillian.glassfish.weld-se-embedded}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-openwebbeans-embedded-1</artifactId>
-                <version>1.0.0.CR2</version>
+                <version>${version.arquillian.glassfish.openwebbeans-embedded}</version>
                 <scope>test</scope>
             </dependency>
 
