--- a/02-se-container/pom.xml
+++ b/02-se-container/pom.xml
@@ -83,6 +83,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-help-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 </project>
