--- a/03-persistence/pom.xml
+++ b/03-persistence/pom.xml
@@ -65,6 +65,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-help-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 </project>
