--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <!--Maven Plugins-->
         <version.maven.embedded.glassfish.plugin>3.1.1</version.maven.embedded.glassfish.plugin>
         <version.maven.clean.plugin>2.5</version.maven.clean.plugin>
+        <version.maven.help.plugin>2.2</version.maven.help.plugin>
         <version.maven.war.plugin>2.4</version.maven.war.plugin>
         <version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
         <version.maven.failsafe.plugin>2.16</version.maven.failsafe.plugin>
@@ -149,6 +150,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>${version.maven.clean.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-help-plugin</artifactId>
+                    <version>${version.maven.help.plugin}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
