--- a/02-se-container/pom.xml
+++ b/02-se-container/pom.xml
@@ -40,7 +40,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.weld.se</groupId>
-                    <artifactId>weld-se</artifactId>
+                    <artifactId>weld-se-core</artifactId>
                 </dependency>
             </dependencies>
         </profile>
