--- a/pom.xml
+++ b/pom.xml
@@ -17,27 +17,27 @@
     </modules>
 
     <properties>
-        <version.java>1.7</version.java>
+        <version.java>1.8</version.java>
         <!--Test-->
-        <version.junit>4.11</version.junit>
-        <version.glassfish>3.1.2.2</version.glassfish>
-        <version.weld>2.1.0.Final</version.weld>
+        <version.junit>4.12</version.junit>
+        <version.glassfish>5.0</version.glassfish>
+        <version.weld>3.0.5.Final</version.weld>
         <version.openwebeans>1.2.1</version.openwebeans>
-        <version.arquillian>1.1.3.Final</version.arquillian>
-        <version.arquillian.persistence>1.0.0.Alpha6</version.arquillian.persistence>
+        <version.arquillian>1.4.0.Final</version.arquillian>
+        <version.arquillian.persistence>1.0.0.Alpha7</version.arquillian.persistence>
         <version.arquillian.glassfish.embedded>1.0.0.CR4</version.arquillian.glassfish.embedded>
         <version.arquillian.glassfish.weld-se-embedded>1.0.0.CR7</version.arquillian.glassfish.weld-se-embedded>
         <version.arquillian.glassfish.openwebbeans-embedded>1.0.0.CR2
         </version.arquillian.glassfish.openwebbeans-embedded>
-        <version.mockito>1.9.5</version.mockito>
+        <version.mockito>2.21.0</version.mockito>
         <!--Maven Plugins-->
         <version.maven.embedded.glassfish.plugin>3.1.1</version.maven.embedded.glassfish.plugin>
-        <version.maven.clean.plugin>2.5</version.maven.clean.plugin>
-        <version.maven.help.plugin>2.2</version.maven.help.plugin>
-        <version.maven.war.plugin>2.4</version.maven.war.plugin>
-        <version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
-        <version.maven.failsafe.plugin>2.16</version.maven.failsafe.plugin>
+        <version.maven.clean.plugin>3.1.0</version.maven.clean.plugin>
+        <version.maven.compiler.plugin>3.8.0</version.maven.compiler.plugin>
         <version.maven.exec.plugin>1.2.1</version.maven.exec.plugin>
+        <version.maven.failsafe.plugin>2.22.0</version.maven.failsafe.plugin>
+        <version.maven.help.plugin>3.1.0</version.maven.help.plugin>
+        <version.maven.war.plugin>2.4</version.maven.war.plugin>
         <!--Project-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -62,11 +62,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--<dependency>-->
-            <!--<groupId>org.jboss.weld.se</groupId>-->
-            <!--<artifactId>weld-se</artifactId>-->
-            <!--<version>${version.weld}</version>-->
-            <!--</dependency>-->
 
             <!-- Open WebBeans -->
             <dependency>
@@ -135,7 +130,7 @@
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
+                <artifactId>mockito-core</artifactId>
                 <version>${version.mockito}</version>
                 <scope>test</scope>
             </dependency>
@@ -153,11 +148,6 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-help-plugin</artifactId>
-                    <version>${version.maven.help.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${version.maven.compiler.plugin}</version>
                     <inherited>true</inherited>
@@ -165,6 +155,11 @@
                         <source>${version.java}</source>
                         <target>${version.java}</target>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-help-plugin</artifactId>
+                    <version>${version.maven.help.plugin}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -197,33 +192,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <repositories>
-        <repository>
-            <id>jboss-public-repository-group</id>
-            <name>JBoss Public Maven Repository Group</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>java.net-public-repository-group</id>
-            <name>Java.Net Public Maven Repository Group</name>
-            <url>https://maven.java.net/content/groups/public</url>
-        </repository>
-        <repository>
-            <id>java.net-staging-repository-group</id>
-            <name>Java.Net Staging Maven Repository Group</name>
-            <url>https://maven.java.net/content/groups/staging</url>
-        </repository>
-        <repository>
-            <id>java.net-releases-repository-group</id>
-            <name>Java.Net Releases Maven Repository Group</name>
-            <url>https://maven.java.net/content/repositories/releases</url>
-        </repository>
-        <repository>
-            <id>java.net-snapshots-repository-group</id>
-            <name>Java.Net Snapshots Maven Repository Group</name>
-            <url>https://maven.java.net/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
 </project>
