--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>02-se-container</module>
         <module>03-persistence</module>
         <module>04-consul</module>
+        <module>05-thorntail</module>
     </modules>
 
     <properties>
